asgn4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> program
Rule 2     program -> imports classes
Rule 3     program -> classes
Rule 4     imports -> imports IMPORT ID SEMICOLON
Rule 5     imports -> IMPORT ID SEMICOLON
Rule 6     classes -> classes class SEMICOLON
Rule 7     classes -> class SEMICOLON
Rule 8     class -> class_header class_body
Rule 9     class_header -> CLASS CLASS_TYPE INHERITS CLASS_TYPE
Rule 10    class_header -> CLASS CLASS_TYPE
Rule 11    class_body -> LBRACE RBRACE
Rule 12    class_body -> LBRACE features_list RBRACE
Rule 13    features_list -> features_list feature SEMICOLON
Rule 14    features_list -> feature SEMICOLON
Rule 15    feature -> feature_header feature_body
Rule 16    feature_header -> DEF ID
Rule 17    feature_body -> LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
Rule 18    feature_body -> LPAREN RPAREN COLON type LBRACE expression RBRACE
Rule 19    feature -> modifier formal
Rule 20    feature -> formal
Rule 21    modifier -> PUBLIC
Rule 22    modifier -> PRIVATE
Rule 23    type -> CLASS_TYPE
Rule 24    type -> INTEGER_TYPE
Rule 25    type -> BOOL_TYPE
Rule 26    type -> STRING_TYPE
Rule 27    type -> OBJECT
Rule 28    type -> SELF_TYPE
Rule 29    formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 30    formal_parameter_list -> formal_parameter
Rule 31    formal_parameter -> ID COLON type
Rule 32    formal_parameter -> ID LSQRBRACKET RSQRBRACKET COLON type
Rule 33    formal -> ID COLON type GETS expression
Rule 34    formal -> ID COLON type
Rule 35    formal -> ID COLON type LSQRBRACKET INTEGER RSQRBRACKET
Rule 36    expression -> block_expression
Rule 37    block_expression -> LBRACE block_list RBRACE
Rule 38    block_list -> block_list expression SEMICOLON
Rule 39    block_list -> expression SEMICOLON
Rule 40    expression -> ID GETS expression
Rule 41    expression -> ID LSQRBRACKET expression RSQRBRACKET GETS expression
Rule 42    expression -> ID LPAREN argument_list RPAREN
Rule 43    expression -> ID LPAREN RPAREN
Rule 44    argument_list -> expression
Rule 45    argument_list -> argument_list COMMA expression
Rule 46    expression -> expression PLUS expression
Rule 47    expression -> expression MINUS expression
Rule 48    expression -> expression TIMES expression
Rule 49    expression -> expression DIVIDE expression
Rule 50    expression -> expression MOD expression
Rule 51    expression -> expression LT expression
Rule 52    expression -> expression GT expression
Rule 53    expression -> expression LTEQ expression
Rule 54    expression -> expression GTEQ expression
Rule 55    expression -> expression EQUAL expression
Rule 56    expression -> expression OR expression
Rule 57    expression -> expression AND expression
Rule 58    expression -> NOT expression
Rule 59    expression -> TILDA expression
Rule 60    expression -> LPAREN expression RPAREN
Rule 61    expression -> SELF
Rule 62    expression -> ID
Rule 63    expression -> ID LSQRBRACKET expression RSQRBRACKET
Rule 64    expression -> INTEGER
Rule 65    expression -> STRING
Rule 66    expression -> TRUE
Rule 67    expression -> FALSE
Rule 68    expression -> BREAK
Rule 69    expression -> CONTINUE
Rule 70    expression -> expression PERIOD ID LPAREN argument_list RPAREN
Rule 71    expression -> expression PERIOD ID LPAREN RPAREN
Rule 72    expression -> NEW type
Rule 73    expression -> ISVOID expression
Rule 74    expression -> let_expression
Rule 75    let -> LET
Rule 76    let_expression -> let formaldehyde IN expression TEL
Rule 77    expression -> expression AT CLASS_TYPE PERIOD ID LPAREN argument_list RPAREN
Rule 78    expression -> expression AT CLASS_TYPE PERIOD ID LPAREN RPAREN
Rule 79    expression -> if_then_else
Rule 80    if_then_else -> IF expression THEN expression ELSE expression FI
Rule 81    expression -> while
Rule 82    while -> WHILE expression LOOP expression POOL
Rule 83    expression -> for
Rule 84    for -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN LOOP expression POOL
Rule 85    formaldehyde -> formaldehyde COMMA ID COLON type GETS expression
Rule 86    formaldehyde -> formaldehyde COMMA ID COLON type
Rule 87    formaldehyde -> formaldehyde COMMA ID COLON type LSQRBRACKET INTEGER RSQRBRACKET
Rule 88    formaldehyde -> ID COLON type GETS expression
Rule 89    formaldehyde -> ID COLON type
Rule 90    formaldehyde -> ID COLON type LSQRBRACKET INTEGER RSQRBRACKET

Terminals, with rules where they appear

AND                  : 57
AT                   : 77 78
BOOL_TYPE            : 25
BREAK                : 68
CLASS                : 9 10
CLASS_TYPE           : 9 9 10 23 77 78
COLON                : 17 18 31 32 33 34 35 85 86 87 88 89 90
COMMA                : 29 45 85 86 87
CONTINUE             : 69
DEF                  : 16
DIVIDE               : 49
ELSE                 : 80
EQUAL                : 55
FALSE                : 67
FI                   : 80
FOR                  : 84
GETS                 : 33 40 41 85 88
GT                   : 52
GTEQ                 : 54
ID                   : 4 5 16 31 32 33 34 35 40 41 42 43 62 63 70 71 77 78 85 86 87 88 89 90
IF                   : 80
IMPORT               : 4 5
IN                   : 76
INHERITS             : 9
INTEGER              : 35 64 87 90
INTEGER_TYPE         : 24
ISVOID               : 73
LBRACE               : 11 12 17 18 37
LET                  : 75
LOOP                 : 82 84
LPAREN               : 17 18 42 43 60 70 71 77 78 84
LSQRBRACKET          : 32 35 41 63 87 90
LT                   : 51
LTEQ                 : 53
MINUS                : 47
MOD                  : 50
NEW                  : 72
NOT                  : 58
OBJECT               : 27
OR                   : 56
PERIOD               : 70 71 77 78
PLUS                 : 46
POOL                 : 82 84
PRIVATE              : 22
PUBLIC               : 21
RBRACE               : 11 12 17 18 37
RPAREN               : 17 18 42 43 60 70 71 77 78 84
RSQRBRACKET          : 32 35 41 63 87 90
SELF                 : 61
SELF_TYPE            : 28
SEMICOLON            : 4 5 6 7 13 14 38 39 84 84
STRING               : 65
STRING_TYPE          : 26
TEL                  : 76
THEN                 : 80
TILDA                : 59
TIMES                : 48
TRUE                 : 66
WHILE                : 82
error                : 

Nonterminals, with rules where they appear

argument_list        : 42 45 70 77
block_expression     : 36
block_list           : 37 38
class                : 6 7
class_body           : 8
class_header         : 8
classes              : 2 3 6
expression           : 17 18 33 38 39 40 41 41 44 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60 63 70 71 73 76 77 78 80 80 80 82 82 84 84 84 84 85 88
feature              : 13 14
feature_body         : 15
feature_header       : 15
features_list        : 12 13
for                  : 83
formal               : 19 20
formal_parameter     : 29 30
formal_parameter_list : 17 29
formaldehyde         : 76 85 86 87
if_then_else         : 79
imports              : 2 4
let                  : 76
let_expression       : 74
modifier             : 19
program              : 1
start                : 0
type                 : 17 18 31 32 33 34 35 72 85 86 87 88 89 90
while                : 81

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . program
    (2) program -> . imports classes
    (3) program -> . classes
    (4) imports -> . imports IMPORT ID SEMICOLON
    (5) imports -> . IMPORT ID SEMICOLON
    (6) classes -> . classes class SEMICOLON
    (7) classes -> . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    IMPORT          shift and go to state 7
    CLASS           shift and go to state 5

    program                        shift and go to state 1
    imports                        shift and go to state 2
    start                          shift and go to state 4
    classes                        shift and go to state 6
    class_header                   shift and go to state 8
    class                          shift and go to state 3

state 1

    (1) start -> program .

    $end            reduce using rule 1 (start -> program .)


state 2

    (2) program -> imports . classes
    (4) imports -> imports . IMPORT ID SEMICOLON
    (6) classes -> . classes class SEMICOLON
    (7) classes -> . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    IMPORT          shift and go to state 10
    CLASS           shift and go to state 5

    classes                        shift and go to state 9
    class_header                   shift and go to state 8
    class                          shift and go to state 3

state 3

    (7) classes -> class . SEMICOLON

    SEMICOLON       shift and go to state 11


state 4

    (0) S' -> start .



state 5

    (9) class_header -> CLASS . CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> CLASS . CLASS_TYPE

    CLASS_TYPE      shift and go to state 12


state 6

    (3) program -> classes .
    (6) classes -> classes . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    $end            reduce using rule 3 (program -> classes .)
    CLASS           shift and go to state 5

    class_header                   shift and go to state 8
    class                          shift and go to state 13

state 7

    (5) imports -> IMPORT . ID SEMICOLON

    ID              shift and go to state 14


state 8

    (8) class -> class_header . class_body
    (11) class_body -> . LBRACE RBRACE
    (12) class_body -> . LBRACE features_list RBRACE

    LBRACE          shift and go to state 15

    class_body                     shift and go to state 16

state 9

    (2) program -> imports classes .
    (6) classes -> classes . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    $end            reduce using rule 2 (program -> imports classes .)
    CLASS           shift and go to state 5

    class_header                   shift and go to state 8
    class                          shift and go to state 13

state 10

    (4) imports -> imports IMPORT . ID SEMICOLON

    ID              shift and go to state 17


state 11

    (7) classes -> class SEMICOLON .

    CLASS           reduce using rule 7 (classes -> class SEMICOLON .)
    $end            reduce using rule 7 (classes -> class SEMICOLON .)


state 12

    (9) class_header -> CLASS CLASS_TYPE . INHERITS CLASS_TYPE
    (10) class_header -> CLASS CLASS_TYPE .

    INHERITS        shift and go to state 18
    LBRACE          reduce using rule 10 (class_header -> CLASS CLASS_TYPE .)


state 13

    (6) classes -> classes class . SEMICOLON

    SEMICOLON       shift and go to state 19


state 14

    (5) imports -> IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 20


state 15

    (11) class_body -> LBRACE . RBRACE
    (12) class_body -> LBRACE . features_list RBRACE
    (13) features_list -> . features_list feature SEMICOLON
    (14) features_list -> . feature SEMICOLON
    (15) feature -> . feature_header feature_body
    (19) feature -> . modifier formal
    (20) feature -> . formal
    (16) feature_header -> . DEF ID
    (21) modifier -> . PUBLIC
    (22) modifier -> . PRIVATE
    (33) formal -> . ID COLON type GETS expression
    (34) formal -> . ID COLON type
    (35) formal -> . ID COLON type LSQRBRACKET INTEGER RSQRBRACKET

    RBRACE          shift and go to state 21
    DEF             shift and go to state 29
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 23
    ID              shift and go to state 28

    features_list                  shift and go to state 24
    feature                        shift and go to state 22
    feature_header                 shift and go to state 26
    modifier                       shift and go to state 27
    formal                         shift and go to state 30

state 16

    (8) class -> class_header class_body .

    SEMICOLON       reduce using rule 8 (class -> class_header class_body .)


state 17

    (4) imports -> imports IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 31


state 18

    (9) class_header -> CLASS CLASS_TYPE INHERITS . CLASS_TYPE

    CLASS_TYPE      shift and go to state 32


state 19

    (6) classes -> classes class SEMICOLON .

    CLASS           reduce using rule 6 (classes -> classes class SEMICOLON .)
    $end            reduce using rule 6 (classes -> classes class SEMICOLON .)


state 20

    (5) imports -> IMPORT ID SEMICOLON .

    IMPORT          reduce using rule 5 (imports -> IMPORT ID SEMICOLON .)
    CLASS           reduce using rule 5 (imports -> IMPORT ID SEMICOLON .)


state 21

    (11) class_body -> LBRACE RBRACE .

    SEMICOLON       reduce using rule 11 (class_body -> LBRACE RBRACE .)


state 22

    (14) features_list -> feature . SEMICOLON

    SEMICOLON       shift and go to state 33


state 23

    (22) modifier -> PRIVATE .

    ID              reduce using rule 22 (modifier -> PRIVATE .)


state 24

    (12) class_body -> LBRACE features_list . RBRACE
    (13) features_list -> features_list . feature SEMICOLON
    (15) feature -> . feature_header feature_body
    (19) feature -> . modifier formal
    (20) feature -> . formal
    (16) feature_header -> . DEF ID
    (21) modifier -> . PUBLIC
    (22) modifier -> . PRIVATE
    (33) formal -> . ID COLON type GETS expression
    (34) formal -> . ID COLON type
    (35) formal -> . ID COLON type LSQRBRACKET INTEGER RSQRBRACKET

    RBRACE          shift and go to state 34
    DEF             shift and go to state 29
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 23
    ID              shift and go to state 28

    feature                        shift and go to state 35
    feature_header                 shift and go to state 26
    modifier                       shift and go to state 27
    formal                         shift and go to state 30

state 25

    (21) modifier -> PUBLIC .

    ID              reduce using rule 21 (modifier -> PUBLIC .)


state 26

    (15) feature -> feature_header . feature_body
    (17) feature_body -> . LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (18) feature_body -> . LPAREN RPAREN COLON type LBRACE expression RBRACE

    LPAREN          shift and go to state 37

    feature_body                   shift and go to state 36

state 27

    (19) feature -> modifier . formal
    (33) formal -> . ID COLON type GETS expression
    (34) formal -> . ID COLON type
    (35) formal -> . ID COLON type LSQRBRACKET INTEGER RSQRBRACKET

    ID              shift and go to state 28

    formal                         shift and go to state 38

state 28

    (33) formal -> ID . COLON type GETS expression
    (34) formal -> ID . COLON type
    (35) formal -> ID . COLON type LSQRBRACKET INTEGER RSQRBRACKET

    COLON           shift and go to state 39


state 29

    (16) feature_header -> DEF . ID

    ID              shift and go to state 40


state 30

    (20) feature -> formal .

    SEMICOLON       reduce using rule 20 (feature -> formal .)


state 31

    (4) imports -> imports IMPORT ID SEMICOLON .

    IMPORT          reduce using rule 4 (imports -> imports IMPORT ID SEMICOLON .)
    CLASS           reduce using rule 4 (imports -> imports IMPORT ID SEMICOLON .)


state 32

    (9) class_header -> CLASS CLASS_TYPE INHERITS CLASS_TYPE .

    LBRACE          reduce using rule 9 (class_header -> CLASS CLASS_TYPE INHERITS CLASS_TYPE .)


state 33

    (14) features_list -> feature SEMICOLON .

    RBRACE          reduce using rule 14 (features_list -> feature SEMICOLON .)
    DEF             reduce using rule 14 (features_list -> feature SEMICOLON .)
    PUBLIC          reduce using rule 14 (features_list -> feature SEMICOLON .)
    PRIVATE         reduce using rule 14 (features_list -> feature SEMICOLON .)
    ID              reduce using rule 14 (features_list -> feature SEMICOLON .)


state 34

    (12) class_body -> LBRACE features_list RBRACE .

    SEMICOLON       reduce using rule 12 (class_body -> LBRACE features_list RBRACE .)


state 35

    (13) features_list -> features_list feature . SEMICOLON

    SEMICOLON       shift and go to state 41


state 36

    (15) feature -> feature_header feature_body .

    SEMICOLON       reduce using rule 15 (feature -> feature_header feature_body .)


state 37

    (17) feature_body -> LPAREN . formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (18) feature_body -> LPAREN . RPAREN COLON type LBRACE expression RBRACE
    (29) formal_parameter_list -> . formal_parameter_list COMMA formal_parameter
    (30) formal_parameter_list -> . formal_parameter
    (31) formal_parameter -> . ID COLON type
    (32) formal_parameter -> . ID LSQRBRACKET RSQRBRACKET COLON type

    RPAREN          shift and go to state 43
    ID              shift and go to state 45

    formal_parameter_list          shift and go to state 42
    formal_parameter               shift and go to state 44

state 38

    (19) feature -> modifier formal .

    SEMICOLON       reduce using rule 19 (feature -> modifier formal .)


state 39

    (33) formal -> ID COLON . type GETS expression
    (34) formal -> ID COLON . type
    (35) formal -> ID COLON . type LSQRBRACKET INTEGER RSQRBRACKET
    (23) type -> . CLASS_TYPE
    (24) type -> . INTEGER_TYPE
    (25) type -> . BOOL_TYPE
    (26) type -> . STRING_TYPE
    (27) type -> . OBJECT
    (28) type -> . SELF_TYPE

    CLASS_TYPE      shift and go to state 47
    INTEGER_TYPE    shift and go to state 50
    BOOL_TYPE       shift and go to state 52
    STRING_TYPE     shift and go to state 49
    OBJECT          shift and go to state 48
    SELF_TYPE       shift and go to state 46

    type                           shift and go to state 51

state 40

    (16) feature_header -> DEF ID .

    LPAREN          reduce using rule 16 (feature_header -> DEF ID .)


state 41

    (13) features_list -> features_list feature SEMICOLON .

    RBRACE          reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    DEF             reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    PUBLIC          reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    PRIVATE         reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    ID              reduce using rule 13 (features_list -> features_list feature SEMICOLON .)


state 42

    (17) feature_body -> LPAREN formal_parameter_list . RPAREN COLON type LBRACE expression RBRACE
    (29) formal_parameter_list -> formal_parameter_list . COMMA formal_parameter

    RPAREN          shift and go to state 53
    COMMA           shift and go to state 54


state 43

    (18) feature_body -> LPAREN RPAREN . COLON type LBRACE expression RBRACE

    COLON           shift and go to state 55


state 44

    (30) formal_parameter_list -> formal_parameter .

    RPAREN          reduce using rule 30 (formal_parameter_list -> formal_parameter .)
    COMMA           reduce using rule 30 (formal_parameter_list -> formal_parameter .)


state 45

    (31) formal_parameter -> ID . COLON type
    (32) formal_parameter -> ID . LSQRBRACKET RSQRBRACKET COLON type

    COLON           shift and go to state 56
    LSQRBRACKET     shift and go to state 57


state 46

    (28) type -> SELF_TYPE .

    LBRACE          reduce using rule 28 (type -> SELF_TYPE .)
    PLUS            reduce using rule 28 (type -> SELF_TYPE .)
    MINUS           reduce using rule 28 (type -> SELF_TYPE .)
    TIMES           reduce using rule 28 (type -> SELF_TYPE .)
    DIVIDE          reduce using rule 28 (type -> SELF_TYPE .)
    MOD             reduce using rule 28 (type -> SELF_TYPE .)
    LT              reduce using rule 28 (type -> SELF_TYPE .)
    GT              reduce using rule 28 (type -> SELF_TYPE .)
    LTEQ            reduce using rule 28 (type -> SELF_TYPE .)
    GTEQ            reduce using rule 28 (type -> SELF_TYPE .)
    EQUAL           reduce using rule 28 (type -> SELF_TYPE .)
    OR              reduce using rule 28 (type -> SELF_TYPE .)
    AND             reduce using rule 28 (type -> SELF_TYPE .)
    PERIOD          reduce using rule 28 (type -> SELF_TYPE .)
    AT              reduce using rule 28 (type -> SELF_TYPE .)
    SEMICOLON       reduce using rule 28 (type -> SELF_TYPE .)
    LOOP            reduce using rule 28 (type -> SELF_TYPE .)
    THEN            reduce using rule 28 (type -> SELF_TYPE .)
    RPAREN          reduce using rule 28 (type -> SELF_TYPE .)
    RBRACE          reduce using rule 28 (type -> SELF_TYPE .)
    RSQRBRACKET     reduce using rule 28 (type -> SELF_TYPE .)
    COMMA           reduce using rule 28 (type -> SELF_TYPE .)
    POOL            reduce using rule 28 (type -> SELF_TYPE .)
    ELSE            reduce using rule 28 (type -> SELF_TYPE .)
    TEL             reduce using rule 28 (type -> SELF_TYPE .)
    FI              reduce using rule 28 (type -> SELF_TYPE .)
    IN              reduce using rule 28 (type -> SELF_TYPE .)
    GETS            reduce using rule 28 (type -> SELF_TYPE .)
    LSQRBRACKET     reduce using rule 28 (type -> SELF_TYPE .)


state 47

    (23) type -> CLASS_TYPE .

    LBRACE          reduce using rule 23 (type -> CLASS_TYPE .)
    PLUS            reduce using rule 23 (type -> CLASS_TYPE .)
    MINUS           reduce using rule 23 (type -> CLASS_TYPE .)
    TIMES           reduce using rule 23 (type -> CLASS_TYPE .)
    DIVIDE          reduce using rule 23 (type -> CLASS_TYPE .)
    MOD             reduce using rule 23 (type -> CLASS_TYPE .)
    LT              reduce using rule 23 (type -> CLASS_TYPE .)
    GT              reduce using rule 23 (type -> CLASS_TYPE .)
    LTEQ            reduce using rule 23 (type -> CLASS_TYPE .)
    GTEQ            reduce using rule 23 (type -> CLASS_TYPE .)
    EQUAL           reduce using rule 23 (type -> CLASS_TYPE .)
    OR              reduce using rule 23 (type -> CLASS_TYPE .)
    AND             reduce using rule 23 (type -> CLASS_TYPE .)
    PERIOD          reduce using rule 23 (type -> CLASS_TYPE .)
    AT              reduce using rule 23 (type -> CLASS_TYPE .)
    SEMICOLON       reduce using rule 23 (type -> CLASS_TYPE .)
    LOOP            reduce using rule 23 (type -> CLASS_TYPE .)
    THEN            reduce using rule 23 (type -> CLASS_TYPE .)
    RPAREN          reduce using rule 23 (type -> CLASS_TYPE .)
    RBRACE          reduce using rule 23 (type -> CLASS_TYPE .)
    RSQRBRACKET     reduce using rule 23 (type -> CLASS_TYPE .)
    COMMA           reduce using rule 23 (type -> CLASS_TYPE .)
    POOL            reduce using rule 23 (type -> CLASS_TYPE .)
    ELSE            reduce using rule 23 (type -> CLASS_TYPE .)
    TEL             reduce using rule 23 (type -> CLASS_TYPE .)
    FI              reduce using rule 23 (type -> CLASS_TYPE .)
    IN              reduce using rule 23 (type -> CLASS_TYPE .)
    GETS            reduce using rule 23 (type -> CLASS_TYPE .)
    LSQRBRACKET     reduce using rule 23 (type -> CLASS_TYPE .)


state 48

    (27) type -> OBJECT .

    LBRACE          reduce using rule 27 (type -> OBJECT .)
    PLUS            reduce using rule 27 (type -> OBJECT .)
    MINUS           reduce using rule 27 (type -> OBJECT .)
    TIMES           reduce using rule 27 (type -> OBJECT .)
    DIVIDE          reduce using rule 27 (type -> OBJECT .)
    MOD             reduce using rule 27 (type -> OBJECT .)
    LT              reduce using rule 27 (type -> OBJECT .)
    GT              reduce using rule 27 (type -> OBJECT .)
    LTEQ            reduce using rule 27 (type -> OBJECT .)
    GTEQ            reduce using rule 27 (type -> OBJECT .)
    EQUAL           reduce using rule 27 (type -> OBJECT .)
    OR              reduce using rule 27 (type -> OBJECT .)
    AND             reduce using rule 27 (type -> OBJECT .)
    PERIOD          reduce using rule 27 (type -> OBJECT .)
    AT              reduce using rule 27 (type -> OBJECT .)
    SEMICOLON       reduce using rule 27 (type -> OBJECT .)
    LOOP            reduce using rule 27 (type -> OBJECT .)
    THEN            reduce using rule 27 (type -> OBJECT .)
    RPAREN          reduce using rule 27 (type -> OBJECT .)
    RBRACE          reduce using rule 27 (type -> OBJECT .)
    RSQRBRACKET     reduce using rule 27 (type -> OBJECT .)
    COMMA           reduce using rule 27 (type -> OBJECT .)
    POOL            reduce using rule 27 (type -> OBJECT .)
    ELSE            reduce using rule 27 (type -> OBJECT .)
    TEL             reduce using rule 27 (type -> OBJECT .)
    FI              reduce using rule 27 (type -> OBJECT .)
    IN              reduce using rule 27 (type -> OBJECT .)
    GETS            reduce using rule 27 (type -> OBJECT .)
    LSQRBRACKET     reduce using rule 27 (type -> OBJECT .)


state 49

    (26) type -> STRING_TYPE .

    LBRACE          reduce using rule 26 (type -> STRING_TYPE .)
    PLUS            reduce using rule 26 (type -> STRING_TYPE .)
    MINUS           reduce using rule 26 (type -> STRING_TYPE .)
    TIMES           reduce using rule 26 (type -> STRING_TYPE .)
    DIVIDE          reduce using rule 26 (type -> STRING_TYPE .)
    MOD             reduce using rule 26 (type -> STRING_TYPE .)
    LT              reduce using rule 26 (type -> STRING_TYPE .)
    GT              reduce using rule 26 (type -> STRING_TYPE .)
    LTEQ            reduce using rule 26 (type -> STRING_TYPE .)
    GTEQ            reduce using rule 26 (type -> STRING_TYPE .)
    EQUAL           reduce using rule 26 (type -> STRING_TYPE .)
    OR              reduce using rule 26 (type -> STRING_TYPE .)
    AND             reduce using rule 26 (type -> STRING_TYPE .)
    PERIOD          reduce using rule 26 (type -> STRING_TYPE .)
    AT              reduce using rule 26 (type -> STRING_TYPE .)
    SEMICOLON       reduce using rule 26 (type -> STRING_TYPE .)
    LOOP            reduce using rule 26 (type -> STRING_TYPE .)
    THEN            reduce using rule 26 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 26 (type -> STRING_TYPE .)
    RBRACE          reduce using rule 26 (type -> STRING_TYPE .)
    RSQRBRACKET     reduce using rule 26 (type -> STRING_TYPE .)
    COMMA           reduce using rule 26 (type -> STRING_TYPE .)
    POOL            reduce using rule 26 (type -> STRING_TYPE .)
    ELSE            reduce using rule 26 (type -> STRING_TYPE .)
    TEL             reduce using rule 26 (type -> STRING_TYPE .)
    FI              reduce using rule 26 (type -> STRING_TYPE .)
    IN              reduce using rule 26 (type -> STRING_TYPE .)
    GETS            reduce using rule 26 (type -> STRING_TYPE .)
    LSQRBRACKET     reduce using rule 26 (type -> STRING_TYPE .)


state 50

    (24) type -> INTEGER_TYPE .

    LBRACE          reduce using rule 24 (type -> INTEGER_TYPE .)
    PLUS            reduce using rule 24 (type -> INTEGER_TYPE .)
    MINUS           reduce using rule 24 (type -> INTEGER_TYPE .)
    TIMES           reduce using rule 24 (type -> INTEGER_TYPE .)
    DIVIDE          reduce using rule 24 (type -> INTEGER_TYPE .)
    MOD             reduce using rule 24 (type -> INTEGER_TYPE .)
    LT              reduce using rule 24 (type -> INTEGER_TYPE .)
    GT              reduce using rule 24 (type -> INTEGER_TYPE .)
    LTEQ            reduce using rule 24 (type -> INTEGER_TYPE .)
    GTEQ            reduce using rule 24 (type -> INTEGER_TYPE .)
    EQUAL           reduce using rule 24 (type -> INTEGER_TYPE .)
    OR              reduce using rule 24 (type -> INTEGER_TYPE .)
    AND             reduce using rule 24 (type -> INTEGER_TYPE .)
    PERIOD          reduce using rule 24 (type -> INTEGER_TYPE .)
    AT              reduce using rule 24 (type -> INTEGER_TYPE .)
    SEMICOLON       reduce using rule 24 (type -> INTEGER_TYPE .)
    LOOP            reduce using rule 24 (type -> INTEGER_TYPE .)
    THEN            reduce using rule 24 (type -> INTEGER_TYPE .)
    RPAREN          reduce using rule 24 (type -> INTEGER_TYPE .)
    RBRACE          reduce using rule 24 (type -> INTEGER_TYPE .)
    RSQRBRACKET     reduce using rule 24 (type -> INTEGER_TYPE .)
    COMMA           reduce using rule 24 (type -> INTEGER_TYPE .)
    POOL            reduce using rule 24 (type -> INTEGER_TYPE .)
    ELSE            reduce using rule 24 (type -> INTEGER_TYPE .)
    TEL             reduce using rule 24 (type -> INTEGER_TYPE .)
    FI              reduce using rule 24 (type -> INTEGER_TYPE .)
    IN              reduce using rule 24 (type -> INTEGER_TYPE .)
    GETS            reduce using rule 24 (type -> INTEGER_TYPE .)
    LSQRBRACKET     reduce using rule 24 (type -> INTEGER_TYPE .)


state 51

    (33) formal -> ID COLON type . GETS expression
    (34) formal -> ID COLON type .
    (35) formal -> ID COLON type . LSQRBRACKET INTEGER RSQRBRACKET

    GETS            shift and go to state 58
    SEMICOLON       reduce using rule 34 (formal -> ID COLON type .)
    LSQRBRACKET     shift and go to state 59


state 52

    (25) type -> BOOL_TYPE .

    LBRACE          reduce using rule 25 (type -> BOOL_TYPE .)
    PLUS            reduce using rule 25 (type -> BOOL_TYPE .)
    MINUS           reduce using rule 25 (type -> BOOL_TYPE .)
    TIMES           reduce using rule 25 (type -> BOOL_TYPE .)
    DIVIDE          reduce using rule 25 (type -> BOOL_TYPE .)
    MOD             reduce using rule 25 (type -> BOOL_TYPE .)
    LT              reduce using rule 25 (type -> BOOL_TYPE .)
    GT              reduce using rule 25 (type -> BOOL_TYPE .)
    LTEQ            reduce using rule 25 (type -> BOOL_TYPE .)
    GTEQ            reduce using rule 25 (type -> BOOL_TYPE .)
    EQUAL           reduce using rule 25 (type -> BOOL_TYPE .)
    OR              reduce using rule 25 (type -> BOOL_TYPE .)
    AND             reduce using rule 25 (type -> BOOL_TYPE .)
    PERIOD          reduce using rule 25 (type -> BOOL_TYPE .)
    AT              reduce using rule 25 (type -> BOOL_TYPE .)
    SEMICOLON       reduce using rule 25 (type -> BOOL_TYPE .)
    LOOP            reduce using rule 25 (type -> BOOL_TYPE .)
    THEN            reduce using rule 25 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 25 (type -> BOOL_TYPE .)
    RBRACE          reduce using rule 25 (type -> BOOL_TYPE .)
    RSQRBRACKET     reduce using rule 25 (type -> BOOL_TYPE .)
    COMMA           reduce using rule 25 (type -> BOOL_TYPE .)
    POOL            reduce using rule 25 (type -> BOOL_TYPE .)
    ELSE            reduce using rule 25 (type -> BOOL_TYPE .)
    TEL             reduce using rule 25 (type -> BOOL_TYPE .)
    FI              reduce using rule 25 (type -> BOOL_TYPE .)
    IN              reduce using rule 25 (type -> BOOL_TYPE .)
    GETS            reduce using rule 25 (type -> BOOL_TYPE .)
    LSQRBRACKET     reduce using rule 25 (type -> BOOL_TYPE .)


state 53

    (17) feature_body -> LPAREN formal_parameter_list RPAREN . COLON type LBRACE expression RBRACE

    COLON           shift and go to state 60


state 54

    (29) formal_parameter_list -> formal_parameter_list COMMA . formal_parameter
    (31) formal_parameter -> . ID COLON type
    (32) formal_parameter -> . ID LSQRBRACKET RSQRBRACKET COLON type

    ID              shift and go to state 45

    formal_parameter               shift and go to state 61

state 55

    (18) feature_body -> LPAREN RPAREN COLON . type LBRACE expression RBRACE
    (23) type -> . CLASS_TYPE
    (24) type -> . INTEGER_TYPE
    (25) type -> . BOOL_TYPE
    (26) type -> . STRING_TYPE
    (27) type -> . OBJECT
    (28) type -> . SELF_TYPE

    CLASS_TYPE      shift and go to state 47
    INTEGER_TYPE    shift and go to state 50
    BOOL_TYPE       shift and go to state 52
    STRING_TYPE     shift and go to state 49
    OBJECT          shift and go to state 48
    SELF_TYPE       shift and go to state 46

    type                           shift and go to state 62

state 56

    (31) formal_parameter -> ID COLON . type
    (23) type -> . CLASS_TYPE
    (24) type -> . INTEGER_TYPE
    (25) type -> . BOOL_TYPE
    (26) type -> . STRING_TYPE
    (27) type -> . OBJECT
    (28) type -> . SELF_TYPE

    CLASS_TYPE      shift and go to state 47
    INTEGER_TYPE    shift and go to state 50
    BOOL_TYPE       shift and go to state 52
    STRING_TYPE     shift and go to state 49
    OBJECT          shift and go to state 48
    SELF_TYPE       shift and go to state 46

    type                           shift and go to state 63

state 57

    (32) formal_parameter -> ID LSQRBRACKET . RSQRBRACKET COLON type

    RSQRBRACKET     shift and go to state 64


state 58
